--- a/tandoor/Views/Shared/_Layout.cshtml
+++ b/tandoor/Views/Shared/_Layout.cshtml
@@ -33,7 +33,7 @@
 
 </head>
 <body>
-
+    <div class="loader"></div>
     <nav id="colorlib-main-nav" role="navigation">
         <a href="#" class="js-colorlib-nav-toggle colorlib-nav-toggle active"><i></i></a>
         <div class="js-fullheight colorlib-table">
@@ -1018,6 +1018,11 @@
     </div>
 
     @Scripts.Render("~/bundles/Indexjs")
+    <script>
+        $(window).load(function () {
+            $(".loader").fadeOut("slow");
+        });
+    </script>
 
 </body>
 </html>
